--- a/index.html
+++ b/index.html
@@ -14,20 +14,19 @@
     <link rel="icon" type="image/jpg" href="img/favicon-32x32.png" />
   </head>
   <body>
-    <div class="all">
+    <div class="card">
       <img src="img/avatar-jessica.jpeg" />
-      <p class="nom">Jessica Randall</p>
+      <h1 class="nom">Jessica Randall</h1>
       <p class="location">London, United Kingdom</p>
 
       <p class="job">"Front-end developer and avid reader"</p>
-      <div class="buttons">
-        <button class="btn">Github</button><br />
-
-        <button class="btn">Frontend Mentor</button><br />
-        <button class="btn">Linkedin</button><br />
-        <button class="btn">Twitter</button><br />
-        <button class="btn">instagram</button>
-      </div>
+      <ul>
+        <li><a href="Github">Github</a></li>
+        <li><a href="Frontend Mentor">Frontend Mentor</a></li>
+        <li><a href="Linkeden">Linkeden</a></li>
+        <li><a href="Twitter">Twitter</a></li>
+        <li><a href="">Instagram</a></li>
+      </ul>
     </div>
   </body>
 </html>
